fix hero landscape on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -24,6 +24,10 @@
         padding-left: 25px;
     }
 
+    .hero {
+        background-position: 65% center;
+    }
+
     .hero .hero-content {
         padding-top: 70%;
     }
